# claude-hive

./: .gitignore  .mcp.json  README.md  index.html  mcp-wrapper.mjs  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  test-setup.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build.yml  release.yml
hooks/: hooks.json  post-tool-use.mjs  pre-tool-use.mjs  session-end.mjs  session-start.mjs  stop.mjs
skills/claude-hive/: SKILL.md
src/: App.test.tsx  App.tsx  api.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray_badge.rs
src-tauri/src/desktop/: mod.rs
src-tauri/src/mcp/: handler.rs  mod.rs  types.rs
src-tauri/src/models/: events.rs  message.rs  mod.rs  session.rs  tests.rs
src-tauri/src/server/: app_state.rs  mod.rs  routes.rs  websocket.rs
src-tauri/src/state/: message_store.rs  mod.rs  session_registry.rs
src-tauri/tests/: api_tests.rs
src-tauri/wix/: path-env.wxs
src/components/: ChatInput.tsx  ChatMessage.tsx  CollapsedBar.test.tsx  CollapsedBar.tsx  ExpandedDashboard.tsx  SessionDetail.tsx  SessionPill.tsx  Settings.tsx  ThemePicker.tsx  TitleBar.tsx
src/hooks/: useTheme.ts  useWebSocket.ts
src/stores/: hubStore.test.ts  hubStore.ts
src/themes/: index.ts
src/types/: index.ts
